style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: "Work Sans", sans-serif;

}
.btn-primary{
    border-radius: 8px;
    background: #FF900E;
    padding: 20px 25px;
    color: #fff;
    font-size: 1.25rem;
    cursor: pointer;
    border: 0;
}
/* Header css */
header {
    background-color: rgba(255, 144, 14, 0.10);
    padding: 50px 240px;
}
nav{
    display: flex;
    justify-content: space-between;
    align-items: center;
}
nav h3{
    font-size: 2.8rem;
    font-weight: 700;
    color: #131313;
}
nav ul {
    display: flex;
}
nav ul li {
    list-style-type: none;
}
nav ul li a{
    margin-right: 30px;
    text-decoration: none;
    color: #424242;
    font-size: 16px;
    font-weight: 500;
}
/* end header nav css */
/* Banner css */
.banner{
    width: 800px;
    text-align: center;
    margin: 0 auto;
    margin-top: 100px;
}
.banner-title{
    font-size: 4rem;
    font-weight: 700;
    color: #131313;
}
.banner-description{
    font-size: 14px;
    font-weight: 500;
    color: #727272;
    margin-top: 20px;
    margin-bottom: 20px;
}
.banner img{
    width: 100%;
    margin-top: 20px;
}
/* header css end */
.team-img{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 20px;
}
.team-img img{
    width: 220px;
    height: 220px;
}
.team-container{
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    margin: 60px 300px 60px 300px;
}
.team-content{
    margin-left: 25px;
}
.team-content h1{
    margin-bottom: 20px;
    font-size: 35px;
    font-weight: 700;
    color: #727272;
}
.team-content span{
    color: #FF900E;
}
.team-content strong{
    font-weight: bold;
    color: #131313;
}
.team-content button{
    margin-top: 20px;
}
/* team css end */

.experience-container{
    margin: 100px 240px 50px 240px;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 20px;
}
.experience-img img{
    width: 100%;
}
.experience-description h1{
    font-size: 40px;
    font-weight: 700;
    color: #131313;
}
.experience-description p{
    margin-top: 20px;
    font-weight: 1rem;
    font-weight: 400;
    line-height: 20px;
    color: #727272;
}
.expericence-subheading{
    margin-top: 25px;
}
.expericence-subheading p{
    font-size: 16px;
    font-weight: 400;
    line-height: 20px;
    color: #727272;
}
.experience-img {
    position: relative;
}
.experience-years{
    background-color: #FF900E;
    width: 250px;
    height: 150px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: absolute;
    bottom: 150px;
    left: 0;
    right: 0;
    border-radius: 5px;
}
.experience-years h1{
    font-size: 40px;
    font-weight: 700;
    color: #fff;
}
.experience-years p{
    font-weight: 18px;
    font-weight: 500;
    color: #fff;
}
/* Experience area css end */
.client-description {
    margin: 60px 240px 60px 240px;
    width: 500px;
}
.client-description h1{
    font-size: 30px;
    font-weight: 700;
    color: #131313;
}
.client-description p{
    font-size: 16px;
    font-weight: 500;
    color: #727272;
}
.client-details {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 25px;
    margin: 4px 60px 4px 240px;
    justify-content: center;
    align-items: center;
    text-align: center;
}
.client-content{
    border-radius: 8px;
    border: 1px solid #FF900E;
    padding: 30px 50px;
}
.client-content h3{
    font-size: 35px;
    font-weight: 600;
    color: #424242;
}
.client-content p{
    font-size: 16px;
    font-weight: 400;
    color: #727272;
}
/* client css end here */
.sponspor-container{
    margin: 100px 240px 50px 240px;
}
.sponspor-contetnt{
    text-align: center;
    width: 500px;
    margin: 0 auto;
}
.sponspor-contetnt h1{
    font-size: 35px;
    font-weight: 700;
    color: #131313;
}
.sponspor-contetnt p{
    font-size: 1rem;
    color: #727272;
    font-weight: 400;
    margin-top: 12px;
}
.sponspor-img {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    gap: 40px;
    margin-top: 80px;
}
.sponspor-img img{
    width: 100%;
}
footer p{
    font-size: 18px;
    font-weight: 400;
    color: #424242;
    text-align: center;
    margin: 25px 10px 20px 10px;
}
/* media query for mobile friendly */
/* mobile device */
@media screen and (max-width: 576px) {
    header {
        padding: 10px;
    }
    nav{
        flex-direction: column;
    }
    .banner{
        width: 320px;
        margin-top: 100px;
    }
    .banner-title{
        font-size: 2rem;
    }
    .banner-description{
       margin-top: 12px;
    }
    .btn-primary{
        padding: 15px 20px;
        font-size: 1rem;
        margin-top: 12px;
    }
    .banner img{
        width: 100%;
    }
    /* header css end here */
    .team-container{
        flex-direction: column;
        justify-content: center;
        align-items: center;
        margin: 60px 10px 60px 10px;
    }
    .team-img{
        display: grid;
        grid-template-columns: repeat(1, 1fr);
        gap: 20px;
    }
   .team-content{
    margin-top: 15px;
    margin-left: 12px;
   }
   /* team css end here */
   .experience-container{
    margin: 25px 15px 25px 15px;
    display: grid;
    grid-template-columns: repeat(1, 1fr);
}
/* end teams css */
.client-description {
    margin: 25px 20px 25px 25px;
    width: 320px;
}
.client-details {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    margin: 4px 30px 20px 30px;
    justify-content: center;
    align-items: center;
    text-align: center;
}
/* client css end */
    .sponspor-container{
    margin: 100px 20px 50px 20px;
    }
    .sponspor-contetnt{
        width: 320px;
    }
    .sponspor-img{
        grid-template-columns: repeat(2, 1fr);
        gap: 20px;
        justify-content: center;
        align-items: center;
    }
    .sponspor-img img{
        width: 153px;
        height: 50px;
    }
}
/* tablet or medium device */

@media screen and (min-width: 576px) and (max-width: 960px){
    header {
        padding: 10px;
    }
    .banner-title{
        margin-top: 12px;
    }
    .banner-description{
       margin-top: 12px;
    }
    .btn-primary{
        margin-top: 18px;
    }
    /* header css end */
    .team-container{
        margin: 60px 20px 60px 20px;
        align-items: center;
    }
    .team-img{
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        gap: 20px;
    }
    .team-img img{
        width: 100%;
    }
    .team-content{
        margin-left: 50px;
    }
    /* team css end here */
    .experience-container{
        margin: 50px 140px 140px 50px;
        display: grid;
        grid-template-columns: repeat(1, 1fr);
    }
    /* end team css */
   /* end teams css */
.client-description {
    margin: 25px 20px 25px 25px;
    width: 320px;
}
.client-details {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    margin: 4px 30px 20px 30px;
    justify-content: center;
    align-items: center;
    text-align: center;
}
/* end here client css */
.sponspor-container{
    margin: 100px 100px 50px 100px;
    }
    .sponspor-img img{
        width: 150px !important;
    }
    .sponspor-img{
        grid-template-columns: repeat(3, 1fr);
        margin-top: 25px;
    }
}

